collision detection, basic wave